# naclac-cli

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
src/commands/: account.rs  add.rs  build.rs  clean.rs  deploy.rs  generate.rs  idl.rs  init.rs  mod.rs  test.rs  upgrade.rs  verify.rs
