[package]
name = "naclac"    
version = "1.2.4"
edition = "2021"
license = "MIT"
description = "The official CLI for the Naclac Solana Framework"
repository = "https://github.com/naclacframework/naclac-vm"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syn = { version = "2.0.117", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.45"
heck = "0.5.0"
sha2 = "0.11.0"
solana-sdk = "3.0.0"
solana-rpc-client = "3.1.11"
solana-keypair = "3.1.2"
solana-transaction = "3.1.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-signer = "3.0.0"
flate2 = "1.1.9"
bs58 = "0.5.1"
toml = "1.1.1"
hex = "0.4.3"
